--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
-MONGODB_URI=mongodb+srv://kartikthatikonda5226_db_user:w56NUcZhYE4tAu4p@cluster0.scmnv2t.mongodb.net/
+MONGODB_URI='enter your mongo uri here'
 PORT=3000
 JWT_SECRET=kajsvfkshvbsak
