--- a/backend/.env
+++ b/backend/.env
@@ -3,4 +3,4 @@ NODE_ENV=production
 PORT=3000
 JWT_SECRET=kajsvfkshvbsak
 JWT_EXPIRE=7d
-FRONTEND_URL=https://your-app-name.vercel.app
+FRONTEND_URL=https://social-post-taskplanet.vercel.app
